# sentinel-agent-sdk

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: api.md  configuration.md  examples.md  getting-started.md  index.md  quickstart.md
examples/: configurable_agent.rs  guardrail_agent.rs  simple_agent.rs
sentinel-agent-sdk-macros/: Cargo.toml
sentinel-agent-sdk-macros/src/: lib.rs
src/: agent.rs  decision.rs  lib.rs  request.rs  response.rs  runner.rs  testing.rs  v2.rs
zentinel-agent-sdk-macros/: Cargo.toml
zentinel-agent-sdk-macros/src/: lib.rs
