[package]
name = "sentinel-agent-sdk"
version = "0.2.0"
edition = "2021"
authors = ["Raskell <hello@raskell.io>"]
description = "High-level SDK for building Sentinel proxy agents"
license = "Apache-2.0"
repository = "https://github.com/raskell-io/sentinel-agent-sdk"
documentation = "https://docs.rs/sentinel-agent-sdk"
keywords = ["sentinel", "proxy", "agent", "sdk", "waf"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[dependencies]
# Core protocol (re-exported)
sentinel-agent-protocol = "0.3"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI (optional)
clap = { version = "4", features = ["derive"], optional = true }

# Derive macros
sentinel-agent-sdk-macros = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
regex = "1"

[features]
default = ["cli", "macros", "v2"]
cli = ["clap"]
macros = ["sentinel-agent-sdk-macros"]
testing = []
v2 = []

[workspace]
members = ["sentinel-agent-sdk-macros"]
